# whysc

./: CMakeLists.txt  COPYRIGHT.txt  Develop.md  README.md
doc/: Untitled.ipynb
example/: CMakeLists.txt  adaptive_interface_fitted_mesh_generation.cpp
include/: AlgebraKernel.h  Algebra_kernel.h  Bisection_alg.h  CellType.h  GeometryKernel.h  Geometry_kernel.h  Hexahedron.h  InterfaceMeshGenerator3d.h  Interface_fitted_mesh_alg_2.h  Interface_fitted_mesh_alg_3.h  Interface_mesh_alg_2.cpp  Interface_mesh_alg_2.h  Interface_mesh_generator_2.h  Interface_mesh_generator_3.h  Level_set_function.h  Matrix.h  Mesh.h  Mesh3d.h  Mesh_2.h  Mesh_3.h  Mesh_toplogy.h  Point.h  Point_2.h  Point_3.h  Polygon.h  Polyhedron.h  Quad.h  QuadMeshDataStructure.h  Structure_mesh_alg.h  Tetrahedron.h  Triangle.h  Vector.h  Vector_2.h  Vector_3.h  mesh_top.h  mesh_utility.h  p4est_interface.h  p8est_interface.h
include/Geometry/: Bisection_alg.h  Box.h  Delaunay_alg_2.h  Geometry_kernel.h  Hexahedron.h  Level_set_function.h  Origin.h  PPoint.h  Point.h  Tetrahedron.h  Vector.h
src/: CMakeLists.txt  cells.cpp
test/: CMakeLists.txt  hello_p4est.cpp  test_algebra.cpp  test_array.cpp  test_edges.cpp  test_geo.cpp  test_interface_mesh_alg_2.cpp  test_interface_mesh_generator_3d.cpp  test_mesh3d.cpp  test_vtk.cpp
